Implemented profile picture

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <header></header>
     <main class="container">
+      <img src="./images/profile-picture.png" />
       <h1>Guilherme Souza</h1>
       <h2>Software Engineer</h2>
     </main>
