--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header></header>
@@ -51,6 +50,6 @@
         >LinkedIn</a
       >
     </footer>
-    <script src="index.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
