Improved performance and application size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guilherme Souza</title>
+    <meta
+      name="description"
+      content="Guilherme Souza is a software engineer based in Brazil.."
+    />
     <link rel="icon" href="https://fav.farm/💻" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +19,10 @@
   <body>
     <header></header>
     <main class="container">
-      <img src="./images/profile-picture.png" />
+      <img
+        src="./images/profile-picture.webp"
+        alt="Profile picture with a cartoon art style"
+      />
       <h1>Guilherme Souza</h1>
       <h2>Software Engineer</h2>
     </main>
