--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <header></header>
+    <div class="spacer"></div>
     <main class="container">
       <img
         src="./images/profile-picture.webp"
@@ -26,7 +26,7 @@
       <h1>Guilherme Souza</h1>
       <h2>Software Engineer</h2>
     </main>
-    <footer class="container">
+    <footer class="footer container">
       <a
         href="mailto:g@gmds.dev"
         target="_blank"
