Update email address

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <footer class="footer container">
       <a
-        href="mailto:g@gmds.dev"
+        href="mailto:dev.guih@gmail.com"
         target="_blank"
         rel="noopener noreferrer"
         class="footer-item"
